# Genesis

./: .gitignore  CMakeLists.txt  CMakeSource.cmake  Makefile  Parser.h  README.md
.github/workflows/: cmake.yml
include/: Source.hpp
include/AST/: Lexer.hpp  Parser.hpp  Statement.hpp  TokenClass.hpp  TokenStatement.hpp
include/Compiler/: Bytecode.hpp  Compiler.hpp  GenesisVM.hpp
include/Hashmap/: Hashmap.cpp
include/Processing/: Lexer.hpp  Processor.hpp  TokenClass.hpp
include/Util/: Source.hpp  Util.hpp
internal/: ProcessingTest.gen
src/: Genesis.cpp
test/: syntax.txt
